<resources>
    <string name="app_name">LightningWallet</string>

    <!--Common-->

    <string name="Alert_Ok">OK</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Share">Forward</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Success">Success</string>
    <string name="Alert_Copied">Copied</string>
    <string name="Alert_Loading">Loading...</string>

    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Create">Create</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Restore">Restore</string>
    <string name="Button_Enable">Enable</string>
    <string name="Button_Back">Back</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Share">Share</string>
    <string name="Button_Done">Done</string>

    <string name="Error">Error</string>
    <string name="NotAvailable">N/A</string>

    <!--Welcome-->

    <string name="Welcome_Title">Welcome to \nLightning \nWallet</string>
    <string name="Welcome_Description">by Horizontal Systems</string>
    <string name="Welcome_Create">Create</string>
    <string name="Welcome_Restore">Restore</string>
    <string name="Welcome_Connect">Connect</string>

    <string name="Remote_ScanQrCodeInstructions">Scan the QR generated by lndconnect server or paste link lndconnect -j to connect your node</string>
    <string name="Remote_Paste">Paste</string>
    <string name="Remote_Connect">Connect</string>
    <string name="Remote_Address">Address</string>

    <!--Main-->

    <string name="Main_Backup">Backup</string>
    <string name="Main_Channels">Channels</string>
    <string name="Main_TotalBalanceTitle">Total Balance</string>
    <string name="Main_Receive">Receive</string>
    <string name="Main_Send">Send</string>

    <!--NodeCredentials-->

    <string name="NodeCredentials_Description">Scan the QR generated by lndconnect server, or paste link lndconnect-j to connect your node</string>
    <string name="NodeCredentials_EmptyClipboardError">Empty clipboard</string>
    <string name="NodeCredentials_InvalidAddressError">Invalid code format</string>
    <string name="NodeCredentials_PleaseGrantCameraPermission">Please grant the camera permission</string>


    <!--Send-->
    <string name="Send_Title">Send %s</string>
    <string name="Send_Close">Close</string>

    <!--Settings-->

    <string name="Settings_Title">Settings</string>
    <string name="Settings_SecurityCenter">Security Center</string>
    <string name="Settings_Notifications">Notifications</string>
    <string name="Settings_ManageCoins">Manage Coins</string>
    <string name="Settings_ExperimentalFeatures">Experimental</string>
    <string name="Settings_RestoreWallet">Restore Wallet</string>
    <string name="Settings_BaseCurrency">Base Currency</string>
    <string name="Settings_Language">Language</string>
    <string name="Settings_LightMode">Light Mode</string>
    <string name="Settings_About">About</string>
    <string name="Settings_ShareThisWallet">Tell Friends</string>
    <string name="Settings_InfoTitleWithVersion" translatable="false">Lightning %s</string>
    <string name="Settings_InfoSubtitle" translatable="false">decentralized app</string>
    <string name="Settings_Report">Contact</string>

    <!--Setting_Tell Friends-->

    <string name="SettingsShare_Title">Share</string>
    <string name="SettingsShare_Text">Unstoppable Wallet - a crypto wallet I recommend</string>
    <string name="title_activity_main_settings">MainSettingsActivity</string>

    <!--Setting_Security-->

    <string name="SettingsSecurity_Fingerprint">Fingerprint</string>
    <string name="SettingsSecurity_EnablePin">Passcode</string>
    <string name="SettingsSecurity_EditPin">Edit Passcode</string>
    <string name="SettingsSecurity_ManageKeys">Manage Wallets</string>
    <string name="SettingsSecurity_BackupWallet">Backup Wallet</string>
    <string name="SettingsSecurity_BlockchainSettings">Blockchain Settings</string>
    <string name="SettingsSecurity_EnableTor">Enable Tor</string>
    <string name="SettingsSecurity_TorConnectionDescription">Tor can safeguard your browsing activities on wallet. Allow permission for using tor browser in settings.</string>

    <!--Channels-->

    <string name="Channels_Open">Open</string>
    <string name="Channels_Closed">Closed</string>
    <string name="Channels_CanSent">Can sent</string>
    <string name="Channels_CanReceive">Can Receive</string>
    <string name="Channels_NewChannel">New Channel</string>
    <string name="Channels_Manage">Manage</string>
    <string name="Channels_Info">Info</string>

</resources>
